# fridge-sage

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: config.py  database.py  main.py  models.py
app/routers/: ask.py  events.py  ingest.py  items.py  search.py
app/services/: ask_service.py  event_service.py  ingest_service.py  item_service.py  vector_store.py
tests/: conftest.py  test_ask.py  test_generation_eval.py  test_ingest.py  test_items.py  test_retrieval_eval.py  test_search.py
