[project]
name = "refrigerator-event-stream"
version = "0.1.0"
description = "Manage your refrigerator items with expiration tracking and semantic search"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "chromadb",
    "sentence-transformers>=5.3.0",
    "openai>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest",
    "httpx",
]

[tool.pytest.ini_options]
markers = [
    "llm: requires a local LLM server running at JUDGE_BASE_URL (e.g. LM Studio)",
]
